Prevent large images from spilling off canvas.
omeka-s-modules/ImageAnnotate#1

--- a/asset/sass/_screen.scss
+++ b/asset/sass/_screen.scss
@@ -80,6 +80,10 @@ a:hover {
     text-decoration: underline;
 }
 
+img {
+    max-width: 100%;
+}
+
 p a,
 span a,
 div a {
